frontend/src/app/components/home/home.component.css
#top {
    height: 100vh;
}

#heading {
    position: absolute;
    top: 38%;
    text-align: center;
    width: 100%;
}

#logo {
    font-weight: normal;
    font-size: 96px;
    line-height: 72px;
}

#menu {
    margin: 18px;
}

section {
    min-height: 40%;
    border-bottom: 1px solid #eee;
}

.k-content {
    margin: 0 auto;
    max-width: 750px;
    text-align: left;
    margin-top: 100px;
    margin-bottom: 100px;
}

